Adding docs.  On branch master  Your branch is ahead of 'github/master' by 2 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   ../docs/Doxyfile
	modified:   ../docs/ast.dox
	modified:   ../src/verilog_ast.h

--- a/docs/ast.dox
+++ b/docs/ast.dox
@@ -9,7 +9,29 @@ child nodes are structured.
 
 ---
 
-@section doc-node-types Node Types
+@section doc-top-node Tree Structure
+
+The AST constructed by the parser has the following structure:
+
+- The tree is constructed with identical nodes of type @ref verilog_ast_node_t
+- Each node has a single parent and zero or more children. These pointers
+  form the basis of the tree.
+- Only the root node can have no parent, in which case, this member is set
+  to NULL.
+- Each node has corresponding `data` and `type` members. The type member
+  tells us what sort of data the node holds, while the data member is a
+  union, which can store any of the required objects. Child nodes should
+  never be stored in the data member.
+
+Each node also has lineno and file members. These tell us the line number
+and file path where the source code which gave us the node came from.
+
+Traversal of the tree can therefore be done using a single expected data type,
+rather than having lots of different types of node which we might otherwise
+need to typecast to traverse easily.
+
+
+@section doc-node-types Data Node Types
 
 @subsection doc-node-root Root Node
 
