--- a/docs/ast.dox
+++ b/docs/ast.dox
@@ -37,9 +37,9 @@ This section contains a list of all grammar constructs and data structures
 that have yet to be written and integrated.
 
     - Attribute Instances [DONE]
-    - Expression L-Values
-    - Expression R-Values
-     - Expression Primaries
+    - Expression L-Values [DONE]
+    - Expression R-Values [DONE]
+     - Expression Primaries [DONE]
      - Constant Expressions
      - Variable Expressions
     - Proper Number Representation
