Added (shoddy) concatenation support to the AST.  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   ../docs/ast.dox
	modified:   ../src/verilog_ast.c
	modified:   ../src/verilog_ast.h
	modified:   ../src/verilog_ast_common.c
	modified:   ../src/verilog_ast_common.h
	modified:   ../src/verilog_parser.y

--- a/docs/ast.dox
+++ b/docs/ast.dox
@@ -40,10 +40,10 @@ that have yet to be written and integrated.
     - Expression L-Values [DONE]
     - Expression R-Values [DONE]
      - Expression Primaries [DONE]
-     - Constant Expressions
-     - Variable Expressions
+     - Constant Expressions [DONE]
+     - Variable Expressions [DONE]
     - Proper Number Representation
-    - Function Calls
+    - Function Calls [DONE]
     - Concatenations
     - Path Delays
     - Specify Blocks
