Started implementing the statements.  On branch master  Your branch is up-to-date with 'github/master'.
 Changes to be committed:
	modified:   ../docs/ast-nodes.dox
	modified:   ../src/verilog_ast.c
	modified:   ../src/verilog_ast.h
	modified:   ../src/verilog_parser.y

--- a/docs/ast-nodes.dox
+++ b/docs/ast-nodes.dox
@@ -14,13 +14,13 @@ structures that have yet to be written and integrated.
     - Proper Number Representation
     - Function Calls [DONE]
     - Concatenations [DONE]
-    - Path Delays
+    - Path Delays [DONE]
     - Specify Blocks
     - Statements
      - Loops
      - Case
-     - If Else
-     - Timing Control
+     - If Else [DONE]
+     - Timing Control [DONE]
     - Fork Join
     - Procedural Blocks
     - Continous assignments
