--- a/docs/ast-nodes.dox
+++ b/docs/ast-nodes.dox
@@ -15,15 +15,15 @@ structures that have yet to be written and integrated.
     - Function Calls [DONE]
     - Concatenations [DONE]
     - Path Delays [DONE]
-    - Specify Blocks
+    - Specify Blocks [DONE]
     - Statements
-     - Loops
-     - Case
+     - Loops [DONE]
+     - Case [DONE]
      - If Else [DONE]
      - Timing Control [DONE]
     - Fork Join
     - Procedural Blocks
-    - Continous assignments
+    - Continous assignments [DONE]
     - UDP
      - UDP Instance
      - UDP Port
