--- a/docs/ast-nodes.dox
+++ b/docs/ast-nodes.dox
@@ -16,13 +16,13 @@ structures that have yet to be written and integrated.
     - Concatenations [DONE]
     - Path Delays [DONE]
     - Specify Blocks [DONE]
-    - Statements
+    - Statements [DONE]
      - Loops [DONE]
      - Case [DONE]
      - If Else [DONE]
      - Timing Control [DONE]
-    - Fork Join
-    - Procedural Blocks
+    - Fork Join [DONE]
+    - Procedural Blocks [DONE]
     - Continous assignments [DONE]
     - UDP
      - UDP Instance
