Adding top level API functions and documentation.  On branch master  Your branch is ahead of 'origin/master' by 3 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	modified:   docs/ast.dox
	modified:   src/main.c
	modified:   src/verilog_parser.h
	modified:   src/verilog_parser_wrapper.c

--- a/docs/ast.dox
+++ b/docs/ast.dox
@@ -2,6 +2,9 @@
 
 @defgroup ast Abstract Syntax Tree
 
+@brief Functions and data structures which build and represent the AST.
+
+@details
 This page describes the structure of the abstract syntax tree that the
 parser constructs. It includes the various root nodes, and how their
 child nodes are structured.
